--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="body-wrap">
     <div class="section1 section">
-        <div class="top-title">
+        <div class="top-title common-title">
             Regional Integrated<br>Healthcare Operation System<br>(RIHOS)
         </div>
     </div>
@@ -30,25 +30,29 @@
     </div>
     <div class="section3 section">
         <div class="s3-text-wrap">
-            <div class="left-title1">
-                KEY TECHNOLOGY EDGES
+            <div class="left-title1 common-title">
+                KEY<br>TECHNOLOGY<br>EDGES
             </div>
             <div class="right-text1">
-                <div class="item-text">
-                    <div class="item-title">1.	Medical Information Technology</div>
-                    <div class="item-desc">We leverage technologies like big data, cloud computing to strengthen medical informatization, improve data management.</div>
+                <div class="right-text-wrap">
+                    <div class="item-text">
+                        <div class="item-title">1.	Medical Information Technology</div>
+                        <div class="item-desc">We leverage technologies like big data, cloud computing to strengthen medical informatization, improve data management.</div>
+                    </div>
+                    <div class="item-text">
+                        <div class="item-title">2.	Decision support tools </div>
+                        <div class="item-desc">We integrate AI-based decision analytics, including machine learning and optimization, to address the resource allocation challenges.</div>
+                    </div>
+                    <div class="item-text">
+                        <div class="item-title">3.	Collaborative Healthcare Communities</div>
+                        <div class="item-desc">We use the IOT and AI to construct a new patient service that combines online and offline to form an integrated ecosystem. </div>
+                    </div>
                 </div>
-                <div class="item-text">
-                    <div class="item-title">2.	Decision support tools </div>
-                    <div class="item-desc">We integrate AI-based decision analytics, including machine learning and optimization, to address the resource allocation challenges.</div>
-                </div>
-                <div class="item-text">
-                    <div class="item-title">3.	Collaborative Healthcare Communities</div>
-                    <div class="item-desc">We use the IOT and AI to construct a new patient service that combines online and offline to form an integrated ecosystem. </div>
-                </div>
+
             </div>
         </div>
 
+        <!--<div style="width: 1px; height: 1rem;"></div>-->
         <div class="bg-img2">
             <img src="images/rihos.png" />
         </div>
